welcome.lessons.welcome.bat.bool1.PosNeg.scala.error
posNeg:4: error: ')' expected but 'else' found.
	}else if (negative && a<0 && b<0){
         ^